# gamejoychain

./: CMakeLists.txt  README.md  genesis.json
CMakeModules/: wasm.cmake
contracts/: CMakeLists.txt
contracts/examples/helloworld/: helloworld.abi
contracts/examples/linear_vesting_asset/: README.md
contracts/examples/redpacket/: README.md  redpacket.cpp
contracts/examples/test/bancor/: README.md
contracts/examples/test/contract_call_contract/: README
contracts/examples/test/dice/: README.md
contracts/examples/test/simpledice/: simpledice.cpp
contracts/musl/: CMakeLists.txt
docker/: Dockerfile  start.sh
libraries/app/: application.cpp
libraries/chain/: contract_evaluator.cpp  data_market_evaluator.cpp  data_transaction_evaluator.cpp  datasource_copyright_evaluator.cpp  db_init.cpp  free_data_product_evaluator.cpp  league_data_product_evaluator.cpp  league_evaluator.cpp  loyalty_evaluator.cpp  pay_data_transaction_evaluator.cpp  proxy_transfer_evaluator.cpp  wasm_interface.cpp
libraries/plugins/data_transaction/: data_transaction_plugin.cpp
libraries/plugins/snapshot/: snapshot.cpp
libraries/wallet/: wallet.cpp
libraries/wasm-jit/: README.md
libraries/wasm-jit/Source/Programs/: Assemble.cpp  CMakeLists.txt
libraries/wasm-jit/Test/Benchmark/: Benchmark.wast
programs/: CMakeLists.txt
programs/gjc_abigen/: CMakeLists.txt  main.cpp
script/monitor/: gxs_fee_pool.py  opengateway_balance.py  witness_participation_rate.py
tests/tests/: database_api_tests.cpp  operation_tests2.cpp  test_wasts.hpp
tools/: gxx.in
(+46 files in other folders)
